# nextreq

./: .gitattributes  README.md
.github/workflows/: deploy.yml  rust.yml
backend/: .gitattributes  .gitignore  Cargo.toml
backend/benches/: formula.rs  lexer.rs  parser.rs
backend/script/: bootstrap  bootstrap_linux  coverage  coverage_linux  format  package_linux  test
backend/src/: lib.rs  property.rs
backend/src/calculator/: interactor.rs  mod.rs  model.rs  view.rs
backend/src/formula/: error.rs  lexer.rs  mod.rs  number.rs  numeric.rs  parser.rs  quoted_string.rs
backend/src/graphql_frontend/: context.rs  mod.rs  query.rs
backend/src/requirement/: control.rs  mod.rs  view.rs
backend/src/requirements/: control.rs  interactor.rs  mod.rs  model.rs  view.rs
distribution/single_image/: Dockerfile
frontend/: .env.development  .env.production  .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/script/: bootstrap_linux  coverage  format  package  test
frontend/src/: App.vue
frontend/src/components/: Calculator.vue  Editor.vue  TheNavbar.vue
frontend/src/router/: index.ts
frontend/src/utils/: selection.ts
frontend/src/views/: Calculator.vue  TheCalculator.vue  TheEditor.vue
frontend/tests/unit/: selection.spec.ts
infrastructure/: README.md  ansible.cfg  staging_server.yml
infrastructure/ansible_plugins/: hosts.ini  staging_aws_ec2.yml
infrastructure/host_vars/: localhost.yml
infrastructure/roles/docker/tasks/: main.yml
infrastructure/roles/ecr_credentials/tasks/: main.yml
infrastructure/roles/hot_reload_service/files/watchtower_ecr/: Dockerfile
infrastructure/roles/hot_reload_service/tasks/: main.yml
infrastructure/roles/prerequisites/tasks/: main.yml
infrastructure/roles/start_ec2_servers/defaults/: main.yml
infrastructure/roles/start_ec2_servers/tasks/: main.yml
script/: README.md  bootstrap  coverage  deploy  format  package  server  test
