[package]
name = "nextreq"
version = "0.1.0"
authors = ["Maximilian Köstler <maximilian@koestler.hamburg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "*"
itertools = "*"
proptest = "*"
rand = "*"

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false