[package]
name = "nextreq"
version = "0.1.0"
authors = ["Maximilian Köstler <maximilian@koestler.hamburg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "^0.3.0"
bigdecimal = "^0.1.2"

[dev-dependencies]
criterion = "*"
itertools = "*"
proptest = "*"
rand = "*"

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "formula"
harness = false