[package]
name = "nextreq"
version = "0.1.0"
authors = ["Maximilian Köstler <maximilian@koestler.hamburg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# property evaluation
num = "^0.3.0"
bigdecimal = "^0.1.2"

# web frontend
rocket = { git = "https://github.com/SergioBenitez/Rocket", default-features = false }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["serve"] }
rocket_cors = { git = "https://github.com/HenningHolmDE/rocket_cors.git", branch = "rocket_async" }

juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_rocket_async = { git = "https://github.com/graphql-rust/juniper" }

[dev-dependencies]
criterion = "*"
itertools = "*"
proptest = "*"
rand = "*"

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "formula"
harness = false